Bug 509569.  Avoid assertion by not storing structs with unused inherit logical box props in them, even though it would be ok to do so.  r=dbaron